import org.gradle.api.JavaVersion

plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

def camelVersion = '2.25.4'
var s3MockVersion = '2.4.10'

group = 'uk.gov.digital.ho.hocs'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

plugins.withType(JacocoPlugin) {
    tasks["test"].finalizedBy 'jacocoTestReport'
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        html.required = false
        csv.required = false
        //for XML
        xml.destination file("${buildDir}/reports/jacoco.xml")
    }
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }
    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-json'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'

    implementation "org.apache.camel:camel-spring-boot:${camelVersion}"
    implementation "org.apache.camel:camel-jackson:${camelVersion}"
    implementation "org.apache.camel:camel-aws:${camelVersion}"
    implementation "org.apache.camel:camel-http4:${camelVersion}"
    implementation 'org.apache.httpcomponents:httpmime:4.5.13'
    implementation 'com.amazonaws:aws-java-sdk:1.12.137'
    implementation 'org.glassfish:javax.json:1.0.4'

    implementation 'org.flywaydb:flyway-core:8.5.12'
    runtimeOnly 'org.hsqldb:hsqldb'
    runtimeOnly 'org.postgresql:postgresql:42.3.6'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.27.2'
    testImplementation "org.apache.camel:camel-test-spring:${camelVersion}"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core'
    testImplementation "com.adobe.testing:s3mock-junit4:${s3MockVersion}"
    testImplementation "com.adobe.testing:s3mock:${s3MockVersion}"
}

jar {
    enabled = false
}
